# decimation

./: CMakeLists.txt  decimation.cpp  decimation.h  decimation.odp  main.cpp
